--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,12 @@
   "env": {
     "DATABASE_URL": "file:../db/data.db"
   },
+  "builds": [
+    {
+      "src": "dist/src/main.js",
+      "use": "@vercel/node"
+    }
+  ],
   "routes": [
     {
       "src": "/(.*)",
