--- a/vercel.json
+++ b/vercel.json
@@ -5,12 +5,13 @@
   "env": {
     "DATABASE_URL": "file:../db/data.db"
   },
-  "builds": [
-    {
-      "src": "dist/src/main.js",
-      "use": "@vercel/node"
+  "functions": {
+    "src/main.js": {
+      "memory": 1024,
+      "maxDuration": 30,
+      "includeFiles": "db/data.db"
     }
-  ],
+  },
   "routes": [
     {
       "src": "/(.*)",
