--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,29 @@
 {
   "version": 2,
-  "buildCommand": "pnpm build & node ./dis/src/main.js",
+  "buildCommand": "pnpm build && node ./dist/src/main.js",
   "outputDirectory": "dist",
   "env": {
-    "DATABASE_URL": "file:../db/data.db"
+    "DATABASE_URL": "file:./db/data.db"
   },
-  "functions": {
-    "dist/src/main.js": {
-      "memory": 1024,
-      "maxDuration": 30,
-      "includeFiles": "db/data.db"
+  "builds": [
+    {
+      "src": "dist/src/main.js",
+      "use": "@vercel/node"
     }
-  },
+  ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "dist/main.js"
+      "dest": "dist/src/main.js",
+      "methods": [
+        "GET",
+        "POST",
+        "PUT",
+        "PATCH",
+        "DELETE",
+        "HEAD",
+        "OPTIONS"
+      ]
     }
   ]
 }
